Added 'sensitive' flag to 'multifield' activity template parameter to hide the parameter values from the view item page.

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -166,10 +166,11 @@
                     fixedOffset: $('#topbar')
                 });
                 $('.ui.checkbox').checkbox();
+                $('.ui.dropdown.button').dropdown();
                 $('.ui.dropdown.action-nothing').dropdown({
                     action: 'nothing'
                 });
-                $('.ui.dropdown:not(.action-nothing)').dropdown({
+                $('.ui.dropdown:not(.action-nothing):not(.button)').dropdown({
                     fullTextSearch: true,
                     clearable: true
                 });
