Added activity template class 'JenkinsJob'

--- a/templates/parameter/activity.html.twig
+++ b/templates/parameter/activity.html.twig
@@ -49,5 +49,5 @@
         <p><em>-- Not required --</em></p>
     {% endif %}
 {% elseif parameter.type in ['config', 'multilineconfig'] %}
-    {{r.prettyDisplay(parameter.displayTemplateParameter(template, param))}}
+    <div>{{r.prettyDisplay(parameter.displayTemplateParameter(template, param))}}</div>
 {% endif %}
