--- a/templates/whatsnew.html.twig
+++ b/templates/whatsnew.html.twig
@@ -13,6 +13,7 @@
 - This "What's New" page!
 - Scroll-to-top floating button on all pages
 - Navigation items on the top bar are now hidden on mobile view to give more space to contents; use scroll-to-top button to get to the navigation breadcrumbs in order to navigate up the hierarchy
+- New 'checkbox' type for activity / template multifield parameters
 - Users with the `approval` access can now view the list of activities that used any particular activity templates in the `edit activity template` screen.
 - Upgraded to Symfony 5.4.* 
 
