--- a/templates/checklist_form.html.twig
+++ b/templates/checklist_form.html.twig
@@ -13,6 +13,7 @@
 
     {% if errors|default(false) %}
         <div class="ui error message">
+            <i class="ui exclamation triangle icon"></i>
             Your input requires your further attention. Please inspect any messages below.
         </div>
     {% endif %}
