--- a/templates/whatsnew.html.twig
+++ b/templates/whatsnew.html.twig
@@ -8,6 +8,11 @@
 
 # What's New
 
+## 3.1.7
+
+- Multifield text parameters can be copied to clipboard via the attached 'copy' buttons
+- Flash and error messages now have icons depending on their types
+
 ## 3.1.6
 
 - This "What's New" page!
